fixed issue with dropdown menu always going to home page and close button not functioning properly (incorrect z-index)

--- a/src/dropdown.css
+++ b/src/dropdown.css
@@ -29,6 +29,7 @@
   background-color: rgba(35, 40, 45, 1);
   color: #008b8b;
   border: none;
+  z-index: 100;
 }
 
 .dropdown-link {
